--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vivek kr dutta - Game Developer Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/jpg" href="./Images/profile pic.jpg"/>
+    <link rel="icon" type="image/png" href="./Images/gameIcon.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
